--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div class="text-box">
               <h3 class="heading-tertiary">Schedule a demo</h3>
               <p class="text-description">Learn More About FloQast.</p>
-              <img class="img" src="images/shape.png" />
+              <img class="img" src="images/shape.png" alt="Background Shape" />
             </div>
             <form class="cta-form">
               <h3 class="heading-tertiary">
@@ -47,14 +47,12 @@
               </h3>
               <div class="inputs">
                 <input
-                  id="first-name"
                   type="text"
                   placeholder="First Name*"
                   name="first-name"
                   required
                 />
                 <input
-                  id="first-name"
                   type="email"
                   placeholder="Email*"
                   name="first-name"
